Propiedades de texto

--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-.win {
-    width: 30vw;
-    height: 70vh;
-    background-color: blueviolet;
-}
-
 .titulo {
     font-size: 3em;
-    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 4;
+    font-weight: 900;
+    color: deeppink;
 }
