--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
 .titulo {
-    font-size: 3em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 4;
-    font-weight: 900;
-    color: deeppink;
+    font-size: 4em;
+    font-family: 'Caveat', cursive;
+    color: orangered;
+    text-align: center;
 }
