--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
-.titulo {
-    font-size: 4em;
+* {
     font-family: 'Caveat', cursive;
-    color: orangered;
-    text-align: center;
+    font-weight: 100;
+}
+
+h1 {
+    color: blueviolet;
+    font-size: 5em;
+    font-weight: 1000;
+}
+
+p {
+    color: black;
+    font-size: 2em;
+    text-align: justify;
 }
