--- a/style.css
+++ b/style.css
@@ -9,10 +9,22 @@ h1 {
     color: blueviolet;
     font-size: 5em;
     font-weight: 1000;
+    
 }
 
 p {
     color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2em;
     text-align: justify;
+}
+
+b {
+    font-family: cursive, Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2em;
+    text-align: justify;
+}
+
+.t1 {
+    display: inline;
 }
