--- a/style.css
+++ b/style.css
@@ -5,26 +5,36 @@
     font-weight: 100;
 }
 
-h1 {
-    color: blueviolet;
-    font-size: 5em;
-    font-weight: 1000;
-    
-}
-
-p {
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2em;
-    text-align: justify;
-}
-
-b {
-    font-family: cursive, Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2em;
-    text-align: justify;
+.win {
+    background-color: orangered;
 }
 
 .t1 {
-    display: inline;
+    color: rgb(255, 255, 255);
+    font-size: 5em;
+    font-weight: 1000;
+    background-color: green;
+    display: inline-block;
+    padding-top: 50px;
+    padding-right: 100px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+}
+
+.t2 {
+    color: rgb(255, 14, 14);
+    font-size: 5em;
+    font-weight: 1000;
+    background-color: blue;
+    display: inline-block;
+    padding: 50px;
+}
+
+.t3 {
+    color: rgb(0, 255, 42);
+    font-size: 5em;
+    font-weight: 1000;
+    background-color: blue;
+    display: inline-block;
+    padding: 100px 250px 300px 110px;
 }
