--- a/style.css
+++ b/style.css
@@ -2,21 +2,15 @@
 
 * {
     font-family: 'Caveat', cursive;
-    font-weight: 100;
+    font-weight: 700;
 }
 
-.win {
+h1 {
     background-color: orangered;
-}
-
-.t1 {
-    font-size: 5em;
-    font-weight: 1000;
-    color: rgb(255, 255, 255);
-    background-color: green;
+    color: white;
     display: inline-block;
     padding: 100px;
-    height: 500px;
-    width: 500px;
     box-sizing: border-box;
+    text-align: center;
+    margin: 40px 20px;
 }
