--- a/style.css
+++ b/style.css
@@ -13,4 +13,6 @@ h1 {
     box-sizing: border-box;
     text-align: center;
     margin: 40px 20px;
+    border-radius: 50px;
+    border: 10px solid green;
 }
