--- a/style.css
+++ b/style.css
@@ -6,14 +6,11 @@
     font-size: 40px;
 }
 
-body {
-    padding-top: 100px;
-}
-
 .caja-fixed {
     background-color: orangered;
     color: white;
     text-align: justify;
-    position: fixed;
-    margin: -100px;
+    position: sticky;
+    top: 0;
+    margin-top: -100px;
 }
