--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 }
 
 div {
-    width: 180px;
-    height: 180px;
-    margin: 20px;
-    border: 10px solid purple;
-    background-color: orangered;
-    display: inline-block;
+    margin: auto;
+    margin-top: 50px;
+    width: 320px;
+    height: 350px;
+    border: 8px solid orangered;
+    background-color: blueviolet;
+    overflow: scroll;
 }
