--- a/style.css
+++ b/style.css
@@ -8,22 +8,10 @@
 
 .caja {
     margin: 10px;
-    width: 300px;
-    height: 550px;
-    background-color: orangered;
+    width: 200px;
+    height: 200px;
     border: 8px solid black;
-}
-
-.caja #img1 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: left;
-}
-
-.caja #img2 {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: right;
+    background-color: orangered;
+    text-align: center;
+    cursor: pointer;
 }
