--- a/style.css
+++ b/style.css
@@ -6,12 +6,28 @@
     font-size: 40px;
 }
 
-.caja {
-    margin: 10px;
-    width: 200px;
-    height: 200px;
-    border: 8px solid black;
-    background-color: orangered;
+.caja1, .caja2, .caja3, .caja4 {
+    margin: 20px;
+    width: 250px;
+    height: 250px;
+    border: 5px solid #000000;
+    color: #ffffff;
     text-align: center;
-    cursor: pointer;
+    display: inline-block;
+}
+
+.caja1 {
+    background-color: #ff6600;
+}
+
+.caja2 {
+    background-color: rgb(0, 4, 255);
+}
+
+.caja3 {
+    background-color: hsl(311, 100%, 50%);
+}
+
+.caja4 {
+    background-color: hwb(128 0% 0%);
 }
